examples/test/testpolicy6015.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6015
  namespace: namespace385
spec:
  podSelector:
    matchLabels:
      key25: value14
      key49: value40
      key34: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value3
          key43: value26
          key44: value3
      podSelector:
        matchLabels:
          key38: value6
